+ Post date and post modified date are now both correctly machine-readable. I spent weeks pondering over the fact that it added many bytes to topic pages, but I've saved tons of HTML bytes overall, and it never increases the gzipped size by more than a hundred bytes or so anyway. Note: the readable date format can be shortened by using a string instead of a constant, if necessary. (JSModify.php, Msg.template.php, sections.css)
* I'm quite amused by my use of the 'ins' tag (inserted data, as opposed to deleted data) for the last modified date. Well, there's nowhere else I could have used that anyway, ah ah... (Msg.template.php, sections.css)

! Fixed some issues with the way Wedge was showing the last modified date, especially on quick edit. (JSModify.php)

- Another useless line. (Profile-Modify.php)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -291,10 +291,10 @@ hr.sep
 	width: 100%
 	padding: 10px 0 5px
 	border-bottom: 1px solid #ccc
-	time
-		display: block
+	h5 + div
 		font-size: .9em
-	.modified
+	ins
+		text-decoration: none
 		font-style: italic
 		color: #a0aaa0
 
